--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>Roman Brito | Developer</title>
   </head>
-  <body>
+  <body style="overflow-x: hidden;">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
